added some javadocs and removed unused code